--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@graphql-codegen/typescript-resolvers": "1.20.0",
     "@types/express": "^4.17.13",
     "@types/graphql": "^14.5.0",
+    "@types/node": "^16.4.10",
     "graphql": "^15.5.1",
     "graphql-tools": "^8.0.0",
     "nodemon": "^2.0.12",
